--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
@@ -54,11 +54,12 @@ keys:
           convert_types:
             - int
           description: |-
-            Preference to be used in auto-generated load balance policies and policies in which preference is not given for the path group.
+            Preference value used when a preference is not given for a path-group in the `wan_virtual_topologies.policies` input or when
+            the path-group is used in an auto generated policy.
 
             Valid values are 1-65535 | "preferred" | "alternate" | "excluded".
 
-            preferred is converted to priority 1.
-            alternate is converted to priority 2.
-            excluded means that the path-group is not considered for generating policies.
+            `preferred` is converted to priority 1.
+            `alternate` is converted to priority 2.
+            `excluded` is used to ignore the path-group when generating policies.
           default: "preferred"
