Feat(eos_designs): Add 1-step Boundary Clock support (#3668)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine1.yml
@@ -98,6 +98,7 @@ management_api_http:
   enable_https: true
 ptp:
   mode: boundary
+  mode_one_step: true
   clock_identity: 00:00:00:00:00:00
   priority1: 20
   priority2: 1
