--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
@@ -19,7 +19,7 @@ hostname uplink_lan_wan_router2
 router adaptive-virtual-topology
    topology role edge
    region region1 id 1
-   zone DEFAULT-ZONE id 1
+   zone region1-ZONE id 1
    site site2 id 2
    !
    policy DEFAULT-POLICY
