--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
@@ -258,7 +258,7 @@ router_adaptive_virtual_topology:
     name: region1
     id: 1
   zone:
-    name: DEFAULT-ZONE
+    name: region1-ZONE
     id: 1
   site:
     name: site2
@@ -343,7 +343,7 @@ metadata:
     - name: Region
       value: region1
     - name: Zone
-      value: DEFAULT-ZONE
+      value: region1-ZONE
     - name: Site
       value: site2
     interface_tags:
@@ -363,5 +363,5 @@ metadata:
     role: edge
     vtep_ip: 192.168.2.2
     region: region1
-    zone: DEFAULT-ZONE
+    zone: region1-ZONE
     site: site2
