--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -167,6 +167,17 @@ keys:
           mlag: 900
           non_mlag: 1020
       - platforms:
+          - 7358X4
+        management_interface: Management1/1
+        reload_delay:
+          mlag: 300
+          non_mlag: 330
+        feature_support:
+          queue_monitor_length_notify: false
+          interface_storm_control: true
+          bgp_update_wait_for_convergence: true
+          bgp_update_wait_install: false
+      - platforms:
           - 7368X4
         management_interface: Management0
         reload_delay:
