Adding test value for eos_cli

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -159,5 +159,12 @@ router bgp 65101
       route-target import evpn 14:14
       route-target export evpn 14:14
       router-id 192.168.255.3
+   !
+   address-family evpn
+      evpn ethernet-segment domain all
+         identifier 0011:1111:1111:1111:1111
+         route-target import 00:01:00:01:00:01
+            !
+            layer-2 fec in-place update
 !
 end
