Refactor(eos_designs): Move priority 1 check to metadata

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
@@ -189,7 +189,7 @@ router_path_selection:
     path_groups:
     - name: MPLS
     - name: INET
-    - name: LTE
+      priority: 42
   - name: LB-DEFAULT-AUTOVPN-POLICY-IT
     path_groups:
     - name: MPLS
