--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -87,8 +87,11 @@ wan_path_groups:
     id: 100
   - name: INET
     id: 101
+    default_preference: 42
   - name: LTE
     id: 102
+    # Testing this knob for AutoVPN
+    excluded_from_default_policy: true
 
 wan_carriers:
   - name: Comcast
