--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3644,18 +3644,22 @@ keys:
           description: 'Preference value used when a preference is not given for a
             path-group in the `wan_virtual_topologies.policies` input or when
 
-            the path-group is used in an auto generated policy.
+            the path-group is used in an auto generated policy except if `excluded_from_default_policy`
+            is set to `true.
 
 
-            Valid values are 1-65535 | "preferred" | "alternate" | "excluded".
+            Valid values are 1-65535 | "preferred" | "alternate".
 
 
             `preferred` is converted to priority 1.
 
-            `alternate` is converted to priority 2.
-
-            `excluded` is used to ignore the path-group when generating policies.'
+            `alternate` is converted to priority 2.'
           default: preferred
+        excluded_from_default_policy:
+          type: bool
+          default: false
+          description: When set to `true`, the path-group is excluded from AVD auto
+            generated policies.
   wan_route_servers:
     documentation_options:
       table: wan-settings
@@ -8552,10 +8556,14 @@ $defs:
               type: str
               convert_types:
               - int
-              description: 'Valid values are 1-65535 | preferred | alternate.
+              description: 'Valid values are 1-65535 | "preferred" | "alternate".
 
 
-                preferred is converted to priority 1.
+                "preferred" is converted to priority 1.
 
-                alternate is converted to priority 2.'
-              default: preferred
+                "alternate" is converted to priority 2.
+
+
+                If not set, each path-group in `names` will be attributed its `default_preference`.
+
+                In that casem the `default_preference` cannot be "excluded".'
