--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
@@ -55,8 +55,10 @@ $defs:
               convert_types:
                 - int
               description: |-
-                Valid values are 1-65535 | preferred | alternate.
+                Valid values are 1-65535 | "preferred" | "alternate".
 
-                preferred is converted to priority 1.
-                alternate is converted to priority 2.
-              default: "preferred"
+                "preferred" is converted to priority 1.
+                "alternate" is converted to priority 2.
+
+                If not set, each path-group in `names` will be attributed its `default_preference`.
+                In that casem the `default_preference` cannot be "excluded".
