--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
@@ -11,6 +11,7 @@ wan_route_servers:
       - name: INET
         interfaces:
           - name: Ethernet1
+            # This is testing overwriting the `public_ip` defined in the l3_interfaces for cv-pathfinder-pathfinder2
             ip_address: 10.9.9.6/31
       - name: MPLS
         interfaces:
