Feat(eos_designs): support access_group_in/out under network services SVI configuration and SVI profiles natively

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2A.cfg
@@ -524,6 +524,8 @@ interface Vlan411
    vrf Tenant_D_OP_Zone
    ip address 10.3.11.2/24
    ipv6 address 2001:db8:311::2/64
+   ip access-group ACL_IN in
+   ip access-group ACL_OUT out
    ipv6 virtual-router address 2001:db8:311::1
    ip virtual-router address 10.3.11.1/24
 !
