--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_svi_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_svi_settings.schema.yml
@@ -80,6 +80,12 @@ $defs:
         items:
           type: str
           description: IPv6_address
+      access_group_in:
+        type: str
+        description: Access-group is assigned on an interface to filter the data packets as they enter the interface.
+      access_group_out:
+        type: str
+        description: Access-group is assigned on an interface to filter the data packets as they leave the interface.
       ip_helpers:
         type: list
         primary_key: ip_helper
